# react-native-pitchy

./: LICENSE  README.md  package.json  react-native-pitchy.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/java/com/pitchy/: PitchyModule.kt  PitchyModuleImpl.kt  PitchyPackage.kt
android/src/newarch/com/pitchy/: PitchyModule.kt
android/src/oldarch/com/pitchy/: PitchyModule.kt
benchmark/: bench_real.cpp  download_real_audio.py  download_test_audio.py
cpp/: amdf.cpp  amdf.h  hps.cpp  hps.h  mpm.cpp  mpm.h  pitch-detector.cpp  pitch-detector.h  rapt.cpp  rapt.h  yin-fft.cpp  yin-fft.h
example/: package.json
example/android/: build.gradle
example/ios/: Podfile
example/src/: App.tsx
ios/: Pitchy.h  Pitchy.mm  RNPitchySpec.h
src/: NativePitchy.ts  index.tsx
